--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="name_empty">Please input your name</string>
     <string name="email_empty">Please input your email</string>
     <string name="password_empty">Please input your password</string>
+    <string name="create_story">Create Story</string>
 </resources>
